bugfix : Fixed text-alignment and background for smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -311,13 +311,6 @@ body {
   padding: 10px;
 }
 
-@media only screen and (max-width: 375px) {
-  .content {
-    text-align: center;
-    background-color: green;
-  }
-}
-
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
